--- a/overview/product-intro-core-concepts/core-concepts-terminology.mdx
+++ b/overview/product-intro-core-concepts/core-concepts-terminology.mdx
@@ -1,235 +1,164 @@
 ---
 title: "Core Concepts and Terminology"
-description: "Get familiar with the essential vocabulary and ideas in GoogleTest: tests, fixtures, test cases, assertions, matchers, mocks, and test discovery. Each concept is defined accessibly, so you can confidently navigate the rest of the documentation."
+description: "Introduce and clarify the foundational terms that underpin successful use of GoogleTest: test cases, assertions, fixtures, parameterized tests, death tests, and mocking. Understand what differentiates GoogleTest and GoogleMock, and the key architectural concepts essential for effective test suite design."
 ---
 
 # Core Concepts and Terminology
 
-Welcome to the foundational guide of GoogleTest, where you'll find clear, practical definitions and explanations of the essential vocabulary and ideas that power this robust testing framework. Understanding these core concepts ensures you can successfully navigate and leverage the full potential of GoogleTest.
+## Understanding GoogleTest Foundations
 
----
+GoogleTest is a comprehensive C++ testing framework that structures your tests around several fundamental concepts. Grasping these terms unlocks the full power of GoogleTest, enabling you to write clear, maintainable, and effective tests.
 
-## What Are Tests?
+### Test Case and Test Suite
 
-At its heart, a *test* is a program or a piece of code written to verify that another piece of code behaves as expected under certain conditions. GoogleTest structures these concepts as:
+- **Test Case:** A group of tests that share common setup or components. In GoogleTest, a test case is represented by a test suite.
+- **Test Suite:** Named collections of tests bundled logically. GoogleTest invokes test suites, each containing multiple tests.
 
-- **Test Cases**
-- **Tests**
+### Tests
 
-A **test** is the smallest unit that checks a particular behavior or property. A **test case** groups related tests, making organization and maintenance easier.
+- A **test** is a single unit of verification, asserting expected outcomes. Each test exercises a part of your codebase and verifies its correctness.
+- Tests reside inside test suites and are typically implemented as functions or methods following GoogleTest's conventions.
 
-### Example
+### Assertions
 
-Here's a simple test example:
+Assertions are conditions checked in tests. They verify if code behavior meets expectations.
+ 
+- Common assertions include:
+  - `EXPECT_EQ(val1, val2)`: Verifies values are equal.
+  - `ASSERT_TRUE(condition)`: Checks a boolean condition.
+
+- When assertions fail, GoogleTest reports detailed messages including file names and line numbers to help diagnose issues rapidly.
+
+### Test Fixtures
+
+Test fixtures allow grouping tests that require the same configuration or context.
+
+- By defining a fixture class, you can set up preconditions (`SetUp()`) and teardown logic (`TearDown()`), avoiding duplication.
+- Tests using fixtures gain access to common data and helpers, improving test readability and maintainability.
+
+### Parameterized Tests
+
+To test the same logic with different inputs, GoogleTest supports parameterized tests.
+
+- They run a test multiple times with varying parameter values.
+- This reduces code duplication and improves coverage.
+
+### Death Tests
+
+Death tests verify that your program terminates (e.g., crashes or exits as expected) under certain conditions.
+
+- Useful to check for assertion failures, invalid inputs, or fatal error handling.
+- GoogleTest runs death tests in a separate process to isolate and verify termination behavior without affecting the main test runner.
+
+### Mocking with GoogleMock
+
+GoogleMock enhances GoogleTest with powerful mocking capabilities.
+
+- Allows you to create mock objects that mimic real dependencies.
+- You can set expectations on method calls, specify returned values, and verify invocation order and frequency.
+- Supports flexible matching of function arguments and sequenced expectations.
+
+While GoogleTest focuses on writing and running tests, GoogleMock facilitates creating controlled, verifiable interactions, enabling rigorous unit testing of complex components.
+
+## Key Architectural Concepts
+
+To design effective test suites with GoogleTest and GoogleMock, understand these essential architectural ideas:
+
+### Isolation and Independence
+
+Each test should be independent and not influenced by others, ensuring reliability and ease of debugging.
+
+### Setup and Teardown
+
+Using fixtures and proper setup/teardown ensures tests start from a known state and clean up after themselves.
+
+### Reusability and Parameterization
+
+Reuse test logic through parameterized tests to improve efficiency and test comprehensiveness.
+
+### Verification at Destruction
+
+Mock objects automatically verify their expectations upon destruction, encouraging encapsulated verification.
+
+### Ordering and Sequences
+
+GoogleMock allows you to specify the order of expected calls explicitly, whether strict, relaxed, or partial sequences.
+
+## Why These Concepts Matter
+
+- Understanding test cases and assertions is fundamental to structuring tests that are expressive and meaningful.
+- Fixtures and parameterized tests empower you to write DRY (Don't Repeat Yourself) tests that are easier to maintain as code evolves.
+- Death tests provide a controlled way to test failure modes and ensure robustness.
+- Mocking enables simulation of complex dependencies and interaction verification, vital for thorough unit testing.
+- The architectural concepts guide you to write clean, maintainable, and scalable tests.
+
+## Practical Example: Basic Test and Mock Usage
 
 ```cpp
 #include <gtest/gtest.h>
+#include <gmock/gmock.h>
 
-TEST(MathTest, Addition) {
-  EXPECT_EQ(2 + 2, 4);
-}
-```
+using ::testing::Return;
 
-In the code above,
-
-- `MathTest` is the **test case**, under which related tests are grouped.
-- `Addition` is a single **test** checking that addition works correctly.
-
-Tests consist of assertions that can pass or fail, determining whether the code meets the criteria.
-
----
-
-## Fixtures: Setting the Stage for Tests
-
-Tests often require a specific environment or setup to run properly. **Fixtures** provide this context by preparing common objects or states before tests run and cleaning them up afterward.
-
-Fixtures help you:
-
-- Avoid redundant setup code across multiple tests.
-- Maintain consistent state to make tests reliable and independent.
-
-### Defining a Fixture
-
-Fixtures are implemented by defining a test class derived from `::testing::Test`:
-
-```cpp
-class MyFixture : public ::testing::Test {
-protected:
-  void SetUp() override {
-    // Code here will run before each test.
-  }
-
-  void TearDown() override {
-    // Code here will run after each test.
-  }
-
-  // Shared objects for multiple tests.
-  int common_value;
-};
-```
-
-### Using a Fixture
-
-When writing tests using a fixture, you write `TEST_F` instead of `TEST`:
-
-```cpp
-TEST_F(MyFixture, TestSomething) {
-  common_value = 42;
-  EXPECT_EQ(common_value, 42);
-}
-```
-
-Each `TEST_F` will execute with its own fresh fixture, ensuring independence.
-
----
-
-## Test Cases and Test Suites
-
-- A **test case** is a group of related tests that share common setup or belong logically together.
-- These are implemented by the first argument to the `TEST` or `TEST_F` macros (e.g., `MathTest` in the example above).
-
-Test suites are a higher-level organizational structure grouping test cases, especially when using advanced test discovery and filtering.
-
----
-
-## Assertions: The Checks That Matter
-
-Assertions are conditions that must hold true for a test to pass. If an assertion fails, the test fails, providing detailed diagnostic information.
-
-### Common Assertions
-
-| Assertion     | Description                                         |
-|---------------|-----------------------------------------------------|
-| `EXPECT_EQ`   | Checks equality; test continues on failure.         |
-| `ASSERT_EQ`   | Checks equality; test aborts on failure.            |
-| `EXPECT_TRUE` | Checks if expression is true; continues on failure. |
-| `ASSERT_TRUE` | Checks if expression is true; aborts on failure.    |
-
-### Example
-
-```cpp
-EXPECT_EQ(5, result);
-ASSERT_TRUE(ptr != nullptr);
-```
-
-- *EXPECT* allows the test to continue and capture multiple failures.
-- *ASSERT* stops the test immediately on failure.
-
----
-
-## Matchers: Expressive Conditions
-
-Matchers are predicates used inside assertions or mock expectations to express detailed checks on values or arguments.
-
-- The wildcard matcher `_` matches any value.
-- Matchers like `Eq()`, `Ge()`, `Lt()`, and others provide expressive ways to specify expectations.
-
-Example matcher usage with GoogleMock:
-
-```cpp
-EXPECT_CALL(mock_object, Method(Ge(5)));
-```
-
-This expects the method to be called with an argument greater than or equal to 5.
-
----
-
-## Mocks: Controlling and Verifying Interactions
-
-Mocks (mock objects) are simulated implementations of classes or interfaces, allowing you to:
-
-- Specify expected calls, arguments, and call counts.
-- Provide simulated return values or behaviors.
-- Verify that the code under test interacts as intended.
-
-### Why Use Mocks?
-
-- To isolate the component under test by replacing its dependencies.
-- To simulate rarely occurring scenarios like errors or timeouts.
-- To verify interaction patterns and correct sequencing.
-
-### Creating Mocks
-
-GoogleMock provides macros to easily create mocks. A mock class inherits from the real interface and declares mock methods using `MOCK_METHOD`:
-
-```cpp
-class MockTurtle : public Turtle {
+// Production interface
+class Database {
  public:
-  MOCK_METHOD(void, PenUp, (), (override));
-  MOCK_METHOD(void, PenDown, (), (override));
-  MOCK_METHOD(void, Forward, (int distance), (override));
+  virtual ~Database() {}
+  virtual bool Connect(const std::string& uri) = 0;
+  virtual int GetRecordCount() = 0;
 };
+
+// Mock class
+class MockDatabase : public Database {
+ public:
+  MOCK_METHOD(bool, Connect, (const std::string& uri), (override));
+  MOCK_METHOD(int, GetRecordCount, (), (override));
+};
+
+TEST(DatabaseTest, ConnectReturnsTrue) {
+  MockDatabase mock_db;
+
+  // Set default action for Connect
+  ON_CALL(mock_db, Connect("valid_uri")).WillByDefault(Return(true));
+
+  // Set expectation and return value for GetRecordCount
+  EXPECT_CALL(mock_db, GetRecordCount()).WillOnce(Return(42));
+
+  EXPECT_TRUE(mock_db.Connect("valid_uri"));
+  EXPECT_EQ(mock_db.GetRecordCount(), 42);
+}
 ```
 
-### Using Mocks in Tests
+This example shows a test case where we configure the mock's default behavior using `ON_CALL` and verify usage with `EXPECT_CALL`. This combination provides control and verification, foundational to test guarantees.
 
-With the mock defined, setting expectations and testing is straightforward:
+## Best Practices and Common Pitfalls
 
-```cpp
-MockTurtle turtle;
-EXPECT_CALL(turtle, PenDown()).Times(1);
-EXPECT_CALL(turtle, Forward(100)).Times(1);
+- **Set expectations before invoking code:** GoogleMock requires setting expectations prior to exercising mocks.
+- **Use ON_CALL for default behaviors:** Use for methods not under strict verification to avoid unnecessary test fragility.
+- **Avoid over-specification:** Only assert on what matters to avoid brittle tests.
+- **Prefer sequences for ordered call verification:** Use `InSequence` or `After` clauses when the order matters.
+- **Verify mocks explicitly if needed:** Though automatic on destruction, use `Mock::VerifyAndClearExpectations()` to catch errors early.
+- **Beware of uninteresting vs unexpected calls:** Uninteresting calls have no expectations; unexpected calls violate expectations.
+- **Use NiceMock, NaggyMock, and StrictMock wisely:** Control how uninteresting calls are handled (ignored, warned, or treated as errors).
 
-// Code under test that uses turtle...
-```
+## Troubleshooting
 
-If the expected calls are not made, the test will fail with detailed diagnostics.
+- If GoogleMock reports many unexpected calls, check your expectations order and argument matchers.
+- Use `--gmock_verbose=info` to get detailed traces for failing tests.
+- When mocking overloaded methods, disambiguate using the `Const()` wrapper or specify exact matchers.
+- If default actions aren't sufficient, use `ON_CALL` to specify behaviors or set `DefaultValue<T>` for custom default return values.
 
----
+## Where to Go Next
 
-## Test Discovery
+- To learn how to write your first test with GoogleTest, visit the [Writing Your First Test](https://github.com/google/googletest/blob/main/docs/guides/core_testing_workflows/writing_first_test.md) guide.
+- For deep dive into mocking techniques, see the [Introducing Mocks: Using GoogleMock](https://github.com/google/googletest/blob/main/docs/guides/core_testing_workflows/using_googlemock.md) page.
+- Consult the [gMock Cheat Sheet](https://github.com/google/googletest/blob/main/docs/gmock_cheat_sheet.md) for quick reference on mocking syntax and usage.
 
-GoogleTest automatically discovers tests defined using `TEST` or `TEST_F` macros, making it easy to compile and run test suites without manual registration.
-
-Run your tests via the generated test binary or command line:
-
-```bash
-test_binary --gtest_filter=TestCaseName.TestName
-```
-
-Filtering and selective running enable targeted test efforts.
 
 ---
 
-## Summary
+<Callout>
 
-This page covered foundational GoogleTest concepts:
+**Note:** This page complements the [What is GoogleTest?](./what-is-googletest.md) overview by defining foundational terms and clarifying how GoogleMock integrates into the testing ecosystem.
 
-- Defining **tests** and **test cases**
-- Creating and using **fixtures** to share setup and teardown
-- Writing **assertions** to verify behaviors
-- Using **matchers** for expressive conditions
-- Creating and employing **mocks** to isolate and verify code interactions
-- Leveraging built-in **test discovery** mechanisms
-
-Understanding these concepts will empower you to write effective, maintainable, and robust C++ tests with GoogleTest.
-
----
-
-## Related Documentation and Resources
-
-- [gMock for Dummies](gmock_for_dummies.md) - A beginner-friendly introduction to mocking.
-- [Mocking Reference](docs/reference/mocking.md) - Detailed descriptions of mocking APIs.
-- [gMock Cookbook](docs/gmock_cook_book.md) - Practical recipes for using GoogleMock.
-- [gMock Cheat Sheet](docs/gmock_cheat_sheet.md) - Quick reference to common mocking patterns and syntax.
-- [Core Concepts and Terminology](overview/product-intro-core-concepts/core-concepts-terminology) (this page)
-
-For advanced topics on test organization and running tests:
-
-- [Writing Your First Test](guides/getting-started/writing-your-first-test)
-- [Test Discovery and Execution Workflow](guides/getting-started/test-discovery-and-execution)
-
-Make sure you have included `<gtest/gtest.h>` in your test files to access the GoogleTest framework.
-
----
-
-## Next Steps
-
-To start writing your tests:
-
-- Define test fixtures for common setup.
-- Create mock classes using `MOCK_METHOD` macros.
-- Compose expectations using `EXPECT_CALL` with matchers.
-- Use assertions like `EXPECT_EQ` and `ASSERT_TRUE` to validate outcomes.
-
-Explore the friendly tutorials and recipes in the gMock and GoogleTest documentation to deepen your skills and take full advantage of these powerful tools.
+</Callout>
