--- a/getting-started/prerequisites-installation/system-requirements.mdx
+++ b/getting-started/prerequisites-installation/system-requirements.mdx
@@ -1,172 +1,182 @@
 ---
-title: "System Requirements & Prerequisites"
-description: "Outlines the minimum compiler standards, supported operating systems, and required tools for building and using GoogleTest and GoogleMock. Ensures users verify compatibility of their development environment before proceeding."
+title: "System Requirements"
+description: "Review supported platforms, compilers, C++ standards, and dependencies required to run GoogleTest and GoogleMock. Understand compatibility and tools needed before proceeding."
 ---
 
-# System Requirements & Prerequisites
+# System Requirements for GoogleTest and GoogleMock
 
-Ensure your development environment is prepared before building and using GoogleTest and GoogleMock. This page details the minimum compiler standards, supported operating systems, and required tools for a smooth setup.
-
----
-
-## 1. Minimum Compiler Standards
-
-GoogleTest requires a compiler that supports **C++17** or later. This is essential for successful compilation and optimal performance.
-
-- **C++ Standard**: Use `-std=c++17` or equivalent in your build configuration.
-  - For example, in CMake:
-    ```cmake
-    set(CMAKE_CXX_STANDARD 17)
-    set(CMAKE_CXX_STANDARD_REQUIRED ON)
-    ```
-  - If not using CMake, add compiler flags like `-std=c++17` manually.
-
-- **Supported Compiler Versions**:
-  - **GCC**: Version supporting C++17
-  - **Clang**: Version supporting C++17
-  - **MSVC**: Visual Studio 2015 (14.0) or later for GoogleMock compatibility
-
-**Important:**
-- Compilers earlier than these versions will cause build failures or undefined behavior.
+Understanding the system requirements and compatibility of GoogleTest and GoogleMock is essential to ensure a smooth setup and successful integration. This guide outlines the supported platforms, required compilers, minimum C++ standard, and library dependencies you need before building and running tests with GoogleTest.
 
 ---
 
-## 2. Supported Operating Systems and Environments
+## 1. Supported Platforms
 
-GoogleTest is designed to be portable across many platforms. Below is the list of **officially supported** operating systems.
+GoogleTest is designed to be portable across a wide range of operating systems and platforms. It follows Google's [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support).
 
-| Operating System                  | Notes                                  |
-|---------------------------------|----------------------------------------|
-| Linux (including Android)        | Requires pthread library support       |
-| macOS                           | Full support with Clang or GCC          |
-| Windows Desktop                 | MSVC and MinGW support                   |
-| Cygwin and MinGW                | Supported                               |
-| FreeBSD, NetBSD, OpenBSD, DragonFlyBSD | Supported                       |
-| Solaris, AIX, HP-UX            | Supported with caveats                   |
-| Embedded platforms (ESP8266, ESP32, NRF52) | Limited support, requires tweaks |
+### Officially Supported Platforms Include:
 
-**Note:** Some embedded or mobile platforms have limitations, including missing file system features or reduced threading support.
+- **Linux** (various distributions)
+- **Windows** (including Desktop and MinGW environments)
+- **macOS**
+- Several BSD variants (FreeBSD, OpenBSD, NetBSD)
+- Other Unix-like environments including Solaris, AIX
 
----
+> See the detailed platform compatibility matrix here: [Supported Platforms Table](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md)
 
-## 3. Required Tools and Libraries
+### Platform Notes:
 
-To build and use GoogleTest and GoogleMock effectively, ensure the following tools and dependencies are installed:
+- Some platforms like Cygwin, Linux Android, and Windows Mobile have tailored support, and some features might be limited or unavailable.
+- Mobile, embedded, or less common platforms may have reduced or unstable support.
 
-- **Build System:**
-  - Recommended: [CMake](https://cmake.org/) (version 3.14 or later for FetchContent support).
-  - Alternative build systems supported via custom integration.
+## 2. Compiler and Language Standards
 
-- **Compiler:**
-  - Compatible C++17 compiler as noted above.
+### Minimum Required Compiler Versions:
 
-- **Threading Library:**
-  - `pthread` library is required on most Unix-like platforms to enable thread safety and parallel testing features.
+- GCC 7.0 or later
+- Clang 3.4 or later
+- MSVC 2017 Update 3 (MSVC 19.11) or later
+- Intel LLVM variants consistent with C++17 support
 
-- **Optional:**
-  - For building shared libraries (DLLs), linkers that support shared objects are needed.
+### C++ Standard Requirement
 
----
+GoogleTest requires **C++17** or higher for successful compilation. Ensure your build environment specifies this, for example using:
 
-## 4. Environment Compatibility Considerations
+- In CMake:  
+  ```cmake
+  set(CMAKE_CXX_STANDARD 17)
+  set(CMAKE_CXX_STANDARD_REQUIRED ON)
+  ```
+- Compiler flags:
+  - GCC/Clang: `-std=c++17`
+  - MSVC: Ensure project settings use at least C++17
 
-- **Thread Safety:**
-  - GoogleTest is thread-safe if your environment supports pthreads.
-  - For Windows, the native threading model is used.
+### Exception and RTTI Support
 
-- **Exception Support:**
-  - Compiler must have exceptions enabled for full feature support.
+- GoogleTest detects exception support automatically but can be manually overridden with macros like `-DGTEST_HAS_EXCEPTIONS=1` or `-0`.
+- RTTI is required by default but can be disabled with careful use of `-DGTEST_HAS_RTTI=0`.
 
-- **Runtime Linking on Windows:**
-  - By default, Visual Studio links C runtimes statically for GoogleTest.
-  - Enable dynamic linkage with:
-    ```cmake
-    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-    ```
+## 3. Library Dependencies
 
-- **Macro Name Conflicts:**
-  - GoogleTest uses macros like `TEST`, `ASSERT_EQ`, which might clash with other libraries.
-  - If conflicts occur, define macros such as `-DGTEST_DONT_DEFINE_TEST=1` and use prefixed macros (`GTEST_TEST`) instead.
+### Threading Support
 
----
+- GoogleTest is thread-safe on platforms where the POSIX Threads (pthreads) library is available.
+- On Windows, native threading APIs are used.
+- If the platform lacks threading support, thread safety and certain features (e.g., death tests) may be limited.
 
-## 5. Verifying Your Setup
+### Regular Expression Libraries
 
-Before proceeding to installation or test writing, confirm your environment matches these requirements:
+- GoogleTest utilizes different regular expression implementations based on platform and build options:
+  - RE2 (via Abseil) if configured
+  - POSIX regex where available
+  - A built-in simple regex engine as fallback
 
-1. **C++17 Compiler Check:**
-    ```bash
-    g++ --version
-    clang++ --version
-    cl.exe
-    ```
-    Verify version supports C++17.
+### Build Tools
 
-2. **CMake Version Check:**
-    ```bash
-    cmake --version
-    ```
-    Version 3.14 or greater is recommended.
+- **CMake** (minimum version 3.14 for some build features) is the primary supported build system.
+- **pkg-config** support is included to ease integration and dependency management.
 
-3. **pthread Availability:**
-    - On Unix-like systems, `pthread.h` should be available.
-    - You can test with:
-      ```cpp
-      #include <pthread.h>
-      int main() { pthread_t t; return 0; }
-      ```
+## 4. Environment and Platform Macros
 
-4. **Operating System Recognition:**
-    - Confirm you are on a supported OS (Linux, Windows Desktop, macOS, etc.).
+GoogleTest uses a set of predefined macros to detect platform capabilities and features:
 
-5. **Network Access (Optional):**
-    - If using CMake's `FetchContent` feature to download GoogleTest sources automatically, verify outbound network access to `github.com`.
+- Operating system macros like `GTEST_OS_LINUX`, `GTEST_OS_WINDOWS`, `GTEST_OS_MAC`, etc.
+- Feature flags such as `GTEST_HAS_PTHREAD`, `GTEST_HAS_EXCEPTIONS`, `GTEST_HAS_RTTI`, and `GTEST_HAS_DEATH_TEST`.
+- These macros are defined automatically, but they can be overridden if needed via compiler flags for customization.
 
----
+## 5. Summary Table of Critical Requirements
 
-## Troubleshooting Common Prerequisite Issues
+| Requirement                      | Detail                                           |
+|---------------------------------|--------------------------------------------------|
+| C++ Standard                    | C++17 or newer                                   |
+| Minimum Compiler Versions       | GCC ≥ 7.0, Clang ≥ 3.4, MSVC 2017 Update 3      |
+| Supported OSes                  | Linux, Windows, macOS, BSD variants, Solaris    |
+| Threading Support               | pthreads on Unix; Windows native threads         |
+| Exception Handling              | Enabled by default; can disable via macro        |
+| RTTI Support                   | Enabled by default; can disable via macro        |
+| Build Tools                     | CMake (≥3.14 for FetchContent), pkg-config       |
 
-<AccordionGroup title="Troubleshooting Common Setup Issues">
-<Accordion title="Missing or Unsupported Compiler">
-Ensure your compiler supports C++17. If your system default compiler is too old, consider installing a newer version or configuring the build to use an alternative compiler.
-</Accordion>
-<Accordion title="CMake Version Too Low">
-Update CMake to 3.14 or higher to use features like `FetchContent_MakeAvailable()`. Older versions can build GoogleTest but might require manual source downloads.
-</Accordion>
-<Accordion title="Missing pthread Library">
-On Unix-like systems, install development packages that provide pthread, e.g., `libpthread-stubs0-dev` on Debian/Ubuntu.
-</Accordion>
-<Accordion title="Visual Studio Runtime Mismatch on Windows">
-If you encounter linker errors about runtime libraries, enable `gtest_force_shared_crt` in CMake or adjust your Visual Studio project settings to match runtime linkage.
-</Accordion>
-</AccordionGroup>
+## 6. Additional Notes
 
----
+- **Multi-threaded tests:** GoogleTest is thread-safe only when pthreads or native threading libraries are present and enabled.
+- **Shared library builds:** When building as shared libraries (DLLs) on Windows, specific macros like `-DGTEST_CREATE_SHARED_LIBRARY=1` must be added.
+- **Wide string support:** GoogleTest supports wide strings on platforms that provide them (mostly desktop environments).
 
-## Additional Resources
+## 7. Troubleshooting System Compatibility
 
-- [Overview of Supported Platforms](https://github.com/google/googletest/blob/main/docs/platforms.md)
-- [Building GoogleTest with CMake](https://github.com/google/googletest/blob/main/README.md#build-with-cmake)
-- [Integration Guidelines and Best Practices](/overview/architecture-features-integration/integration-ecosystem)
+If you encounter build or runtime issues related to platform or compiler incompatibilities:
 
+- Verify that your compiler supports C++17 features required by GoogleTest.
+- Confirm threading libraries and POSIX features are available and properly linked.
+- Check that environment-specific macros haven't been manually overridden.
+- Consult the GoogleTest [Supported Platforms](https://github.com/google/googletest/blob/main/docs/platforms.md) documentation.
+- Adjust compiler and linker flags as needed, especially for threading and exception support.
+
+## 8. References and Links
+
+- [GoogleTest Supported Platforms](https://github.com/google/googletest/blob/main/docs/platforms.md)
+- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md) 
+- [Building and Configuring GoogleTest](https://github.com/google/googletest/blob/main/README.md)
+- [GoogleTest CMake Build Instructions](https://cmake.org/)
+- [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support)
 
 ---
 
-## Summary
+## Diagram: GoogleTest Platform and Feature Detection Flow
 
-This page ensures you verify all system requirements and prerequisites before building or integrating GoogleTest and GoogleMock. Confirm the compiler supports C++17, that your OS is supported, and that all necessary tools like CMake and pthread are installed. Addressing these foundational steps will save time and prevent common build and runtime issues.
+```mermaid
+flowchart TD
+
+  Start([Start Build Process]) --> DetectEnv["Detect Environment Macros"]
+
+  DetectEnv -->|Detects OS| PlatformCheck{Platform}
+
+  PlatformCheck -->|Windows| Windows["GTEST_OS_WINDOWS"]
+  PlatformCheck -->|Linux| Linux["GTEST_OS_LINUX"]
+  PlatformCheck -->|macOS| Mac["GTEST_OS_MAC"]
+  PlatformCheck -->|Others| Other["Other Supported OS Macros"]
+
+  Windows --> CheckThreadSupportWindows["Check Thread Support via Windows Native APIs"]
+  Linux --> CheckPthread["Check pthread Availability"]
+  Mac --> CheckPthread
+  Other --> CheckPthread
+
+  CheckPthread -->|Found| EnableThreadsafe["Enable GTEST_IS_THREADSAFE=1"]
+  CheckPthread -->|Not Found| DisableThreadsafe["Disable Thread Safety"]
+
+  EnableThreadsafe --> CheckExceptions["Check for Exception Support"]
+  DisableThreadsafe --> CheckExceptions
+
+  CheckExceptions -->|Enabled| EnableExceptions["GTEST_HAS_EXCEPTIONS=1"]
+  CheckExceptions -->|Disabled| DisableExceptions["GTEST_HAS_EXCEPTIONS=0"]
+
+  EnableExceptions & DisableExceptions --> CheckRTTI["Check for RTTI Support"]
+
+  CheckRTTI -->|Enabled| EnableRTTI["GTEST_HAS_RTTI=1"]
+  CheckRTTI -->|Disabled| DisableRTTI["GTEST_HAS_RTTI=0"]
+
+  EnableRTTI & DisableRTTI --> CheckFeatures["Final Feature Set Determined"]
+
+  CheckFeatures --> End([Build Configured])
+
+  classDef decision fill:#f9f,stroke:#333,stroke-width:2px;
+  class PlatformCheck decision;
+  
+```
 
 ---
 
 ## Next Steps
 
-Proceed to the [Installing with CMake](/getting-started/prerequisites-installation/installation-cmake) guide to begin building GoogleTest using your prepared environment.
-
-
----
-
-*This page fits within the Getting Started > Installation & Environment Setup section, complementing detailed guides on installing and configuring GoogleTest, and it aligns with the broader architecture and integration documentation.*
+- Confirm your development environment meets these requirements.
+- Proceed to [Installation on Linux, macOS, and Windows](../prerequisites-installation/installation-platforms) guide.
+- Explore building and configuring your project with GoogleTest using CMake as detailed in the [Building and Configuring Your Project](../prerequisites-installation/building-configuring-project) guide.
 
 ---
 
-<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "README.md", "range": "1-150"}, {"path": "docs/platforms.md", "range": "1-20"}, {"path": "docs/primer.md", "range": "1-290"}]}/>
+<Check>
+Make sure your compiler supports C++17 and that appropriate threading libraries are available to leverage full GoogleTest capabilities.
+</Check>
+
+<Note>
+Using the provided CMake build scripts will automatically manage most platform-specific flags and dependencies.
+</Note>
